# smart_playlist

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/: channel_videos.py  config.py  credentials.py  main.py  playlists.py
src/model/: video_item.py
yt_api/: channel_videos.py  config.py  main.py  playlists.py
yt_api/config/: config.yaml.example
